<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="bars">Bars</string>

    <string name="cafes">Cafes</string>
    <string name="closed">Closed</string>

    <string name="filters">Filters</string>

    <string name="icon_type_place">Icon corresponding to the type of place</string>

    <string name="maps_link">&lt;a href="%s">View Map&lt;/a></string>

    <string name="nearby_places">Nearby Places</string>
    <string name="no_results">No results</string>

    <string name="only_opened_places">Only opened places</string>
    <string name="open_now">Open now</string>

    <string name="photo_of_place">Photo of the place</string>
    <string name="place_details">Place details</string>
    <string name="profile_photo">Profile photo</string>

    <string name="radius_meters">Radius of %d meters.</string>
    <string name="rating_star_1">Rating star 1</string>
    <string name="rating_star_2">Rating star 2</string>
    <string name="rating_star_3">Rating star 3</string>
    <string name="rating_star_4">Rating star 4</string>
    <string name="rating_star_5">Rating star 5</string>
    <string name="restaurants">Restaurants</string>

    <string name="website_link">&lt;a href="%s">Website&lt;/a></string>

</resources>