<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/star_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:src="@drawable/ic_star_24px"
        android:contentDescription="@string/rating_star_1" />

    <ImageView
        android:id="@+id/star_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:src="@drawable/ic_star_24px"
        android:contentDescription="@string/rating_star_2" />

    <ImageView
        android:id="@+id/star_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:src="@drawable/ic_star_24px"
        android:contentDescription="@string/rating_star_3" />

    <ImageView
        android:id="@+id/star_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:src="@drawable/ic_star_24px"
        android:contentDescription="@string/rating_star_4" />

    <ImageView
        android:id="@+id/star_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:src="@drawable/ic_star_24px"
        android:contentDescription="@string/rating_star_5" />

</LinearLayout>